--- a/.github/workflows/master_fis-azure-webapp-sledz.yml
+++ b/.github/workflows/master_fis-azure-webapp-sledz.yml
@@ -19,12 +19,13 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.301'
+          dotnet-version: '6.0'
           include-prerelease: true
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
-
+      - name: Run tests
+        run: dotnet test
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
